shui ping L1 shi dan dian chang shi qi ye zhi zai yi xie ju bu chang jing zhong qian chang le shu zi hua

--- a/date/2025-05/index.htm
+++ b/date/2025-05/index.htm
@@ -48,8 +48,7 @@
     <link rel="stylesheet" href="/assets/website/css/sing_box_node/glightbox.min.css" />
     <link rel="stylesheet" href="/assets/website/css/sing_box_node/main.css" />
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGT03QY9ZY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -141,13 +140,13 @@
                                                 <div class="row item xcblog-blog-item" data-date="2025-05-21">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-5-21-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20250104/959cf6f1d4eb54aa98fe08a8b61fd965.webp" alt="代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享" style="width:100%;">
+                                    <img src="/uploads/20240825-1/8ca2485886964e2d5bd5b5465da841c1.webp" alt="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
                                 <a href="/free-nodes/2025-5-21-free-subscribe-node.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享                                    </h3>
+                                        免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享                                    </h3>
                                 </a>
                                 <p>这一次的节点更新覆盖了美国、欧洲、加拿大、香港、新加坡、韩国、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
@@ -162,7 +161,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
