--- a/about-us.htm
+++ b/about-us.htm
@@ -48,8 +48,7 @@
     <link rel="stylesheet" href="/assets/website/css/sing_box_node/glightbox.min.css" />
     <link rel="stylesheet" href="/assets/website/css/sing_box_node/main.css" />
     <link rel="stylesheet" href="/assets/website/css/G.css" />
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGT03QY9ZY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -152,7 +151,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">代理VPN - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
