--- a/date/2025-05/index.htm
+++ b/date/2025-05/index.htm
@@ -137,6 +137,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-05-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-5-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-5-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了加拿大、欧洲、香港、新加坡、日本、韩国、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-05-21">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-5-21-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -162,6 +176,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -173,7 +188,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                     </ul>
     </div>
