--- a/free-nodes/2025-5-21-free-subscribe-node.htm
+++ b/free-nodes/2025-5-21-free-subscribe-node.htm
@@ -160,6 +160,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅文件链接</h2><p>&nbsp;</p><p><strong>Clash订阅链接</strong></p><p>https://clash-ssr-node.github.io/uploads/2025/05/2-20250521.yaml</p><p>https://clash-ssr-node.github.io/uploads/2025/05/4-20250521.yaml</p><p>&nbsp;</p><p><strong>V2ray订阅链接:</strong></p><p>https://clash-ssr-node.github.io/uploads/2025/05/0-20250521.txt</p><p>https://clash-ssr-node.github.io/uploads/2025/05/2-20250521.txt</p><p>https://clash-ssr-node.github.io/uploads/2025/05/3-20250521.txt</p><p>https://clash-ssr-node.github.io/uploads/2025/05/4-20250521.txt</p><p><strong>Sing-Box订阅链接</strong></p><p>https://clash-ssr-node.github.io/uploads/2025/05/20250521.json</p><h2>使用必看</h2><p>&nbsp;</p><p>全部节点信息均来自互联网收集，且用且珍惜，推荐机场：「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。仅针对用于学习研究的用户分享，请勿随意传播其他信息。免费节点有效时间比较短，遇到失效是正常现象。</p>                </div>
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
+                                        <p>下一个：<a href="/free-nodes/2025-5-22-free-subscribe-node.htm">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></p>
                                     </div>
                                 </div>
                 <div class="col-md-3">
@@ -169,6 +170,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
@@ -181,7 +183,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                     </ul>
     </div>
