--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="http://cgp2-z.com/paid-subscribe/" />
+        <link rel="canonical" href="http://cgp2-g.com/paid-subscribe/" />
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>付费机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 免费Clash SSR 机场订阅官网</title>
@@ -12,7 +12,7 @@
 
     <meta name="author" content="免费Clash SSR 机场订阅官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-z.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-g.com/paid-subscribe/" />
     <meta property="og:site_name" content="免费Clash SSR 机场订阅官网" />
     <meta property="og:title" content="付费机场订阅推荐，支持Clash/V2ray/Surge/VMESS等客户端和协议 - 免费Clash SSR 机场订阅官网" />
     <meta property="og:image" content="/assets/website/img/sing_box_node/favicon.ico" />
@@ -567,6 +567,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -578,7 +579,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                     </ul>
     </div>
