--- a/about-us.htm
+++ b/about-us.htm
@@ -151,8 +151,13 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-subscribe-node.htm" title="免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-23-free-high-speed-nodes.htm" title="免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月23日18.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-26-free-subscribe-node.htm" title="免费Clash SSR - 5月26日21.5M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享">免费Clash SSR - 5月26日21.5M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-21-free-subscribe-node.htm" title="免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月21日21.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-v2ray.htm" title="免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-subscribe-node.htm" title="免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -164,7 +169,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                     </ul>
     </div>
