xi xiao shou de suo you zhi neng shou ji dou ying gai cai yong USB C zuo wei biao zhun zhe yu ou meng

--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -137,6 +137,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、日本、韩国、欧洲、香港、新加坡、加拿大等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、日本、欧洲、香港、新加坡、美国、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、加拿大、香港、日本、韩国、新加坡、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、香港、新加坡、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-27">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-8-27-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -221,64 +277,8 @@
                                 <p>这一次的节点更新覆盖了日本、韩国、美国、香港、新加坡、加拿大、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-21-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-21-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了日本、韩国、香港、加拿大、美国、新加坡、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
-                            <div class="col-md-3">
-                                <a href="/news/article-147246.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/f4ba2128dc4fd70974c572d0e1be1816.webp" alt="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-147246.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙                                    </h3>
-                                </a>
-                                <p>引言：当网络自由遇上数字围墙  在韩国这个全球网络覆盖率最高的国家之一，互联网用户却面临着独特的困境——看似开放的网络环境中暗藏着审查机制与数据监控。从政府主导的"网络实名制"到近年来升级的网络安全法</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-20">
-                            <div class="col-md-3">
-                                <a href="/news/article-146879.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/09b6a48b02beb826a8286e56cc49bbe9.webp" alt="解锁网络自由：详解Shadowrocket配置分享全攻略" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-146879.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        解锁网络自由：详解Shadowrocket配置分享全攻略                                    </h3>
-                                </a>
-                                <p>在这个数字化时代，网络隐私和自由访问已成为现代网民的基本需求。作为iOS平台上广受欢迎的网络代理工具，Shadowrocket以其强大的功能和灵活的配置选项赢得了众多用户的青睐。然而，许多用户在掌握基</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-19">
-                            <div class="col-md-3">
-                                <a href="/news/article-146514.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/95231a9ee353a88dd62f350f4f78784e.webp" alt="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-146514.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验                                    </h3>
-                                </a>
-                                <p>在当今复杂的网络环境中，许多用户都面临着访问限制和隐私保护的挑战。Clash 作为一款基于 Go 语言开发的高性能代理工具，因其灵活的规则配置和高效的流量转发能力而广受欢迎。而 Clash Magis</p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li><a href="/date/2025-08/page-3.htm">3</a></li> <li><a href="/date/2025-08/page-2.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li><a href="/date/2025-08/page-3.htm">3</a></li><li><a href="/date/2025-08/page-4.htm">4</a></li> <li><a href="/date/2025-08/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
-                        <li class="py-2"><a href="/news/article-134224.htm" title="掌握网络自由：Clash代理绕过终极配置指南">掌握网络自由：Clash代理绕过终极配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-140807.htm" title="深度解析Shadowrocket：从版本选择到高阶配置的全方位指南">深度解析Shadowrocket：从版本选择到高阶配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-138677.htm" title="梅林科学上网安装失败全解析：从故障排查到完美解决方案">梅林科学上网安装失败全解析：从故障排查到完美解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-133525.htm" title="Clash重新登录全攻略：从入门到精通的一站式解决方案">Clash重新登录全攻略：从入门到精通的一站式解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-135609.htm" title="深度解析：Shadowrocket数据不走问题的终极解决方案">深度解析：Shadowrocket数据不走问题的终极解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-132810.htm" title="Clash续费全攻略：从零开始掌握代理服务的无缝延续">Clash续费全攻略：从零开始掌握代理服务的无缝延续</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-135287.htm" title="解密vmess租赁：科学上网的终极选择与实用指南">解密vmess租赁：科学上网的终极选择与实用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-135826.htm" title="突破网络边界：PS4玩家实现SS科学上网的终极指南">突破网络边界：PS4玩家实现SS科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
+                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
