--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -165,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-140449.htm" title="突破数字边界：科学上网的全面指南与最佳实践">突破数字边界：科学上网的全面指南与最佳实践</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
-                        <li class="py-2"><a href="/news/article-134224.htm" title="掌握网络自由：Clash代理绕过终极配置指南">掌握网络自由：Clash代理绕过终极配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
-                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-139031.htm" title="毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理">毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
+                        <li class="py-2"><a href="/news/article-133525.htm" title="Clash重新登录全攻略：从入门到精通的一站式解决方案">Clash重新登录全攻略：从入门到精通的一站式解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-136542.htm" title="全面掌握vmess链接转换：从基础到实战的完整指南">全面掌握vmess链接转换：从基础到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
                         <li class="py-2"><a href="/news/article-136900.htm" title="全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南">全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-131717.htm" title="突破网络限制：v2rayNG注册链接获取与完整使用指南">突破网络限制：v2rayNG注册链接获取与完整使用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
