--- a/about-us.htm
+++ b/about-us.htm
@@ -151,16 +151,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
-                        <li class="py-2"><a href="/news/article-140449.htm" title="突破数字边界：科学上网的全面指南与最佳实践">突破数字边界：科学上网的全面指南与最佳实践</a></li>
-                        <li class="py-2"><a href="/news/article-136542.htm" title="全面掌握vmess链接转换：从基础到实战的完整指南">全面掌握vmess链接转换：从基础到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-132903.htm" title="解锁网络自由：Clash免费获取与配置全攻略">解锁网络自由：Clash免费获取与配置全攻略</a></li>
                         <li class="py-2"><a href="/news/article-135287.htm" title="解密vmess租赁：科学上网的终极选择与实用指南">解密vmess租赁：科学上网的终极选择与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
                         <li class="py-2"><a href="/news/article-136186.htm" title="跨越信息边界：科学上网的全面教学指南与深度思考">跨越信息边界：科学上网的全面教学指南与深度思考</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
+                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
+                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
+                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
                     </ul>
     </div>
 </div>
@@ -172,7 +172,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
