--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-136900.htm" title="全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南">全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-135609.htm" title="深度解析：Shadowrocket数据不走问题的终极解决方案">深度解析：Shadowrocket数据不走问题的终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-139384.htm" title="解锁网络自由：Shadowrocket节点获取与使用终极指南">解锁网络自由：Shadowrocket节点获取与使用终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
-                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
-                        <li class="py-2"><a href="/news/article-134919.htm" title="天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南">天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
                         <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
-                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
-                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
+                        <li class="py-2"><a href="/news/article-137969.htm" title="解锁网络自由：Shadowrocket订阅添加全攻略与深度解析">解锁网络自由：Shadowrocket订阅添加全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-132903.htm" title="解锁网络自由：Clash免费获取与配置全攻略">解锁网络自由：Clash免费获取与配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-131371.htm" title="突破网络边界：梅林固件科学上网全攻略与深度解析">突破网络边界：梅林固件科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-132810.htm" title="Clash续费全攻略：从零开始掌握代理服务的无缝延续">Clash续费全攻略：从零开始掌握代理服务的无缝延续</a></li>
+                        <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
