--- a/date/2025-08/page-2.htm
+++ b/date/2025-08/page-2.htm
@@ -137,6 +137,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-21-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-21-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了日本、韩国、香港、加拿大、美国、新加坡、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
+                            <div class="col-md-3">
+                                <a href="/news/article-147246.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241102-1/f4ba2128dc4fd70974c572d0e1be1816.webp" alt="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-147246.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙                                    </h3>
+                                </a>
+                                <p>引言：当网络自由遇上数字围墙  在韩国这个全球网络覆盖率最高的国家之一，互联网用户却面临着独特的困境——看似开放的网络环境中暗藏着审查机制与数据监控。从政府主导的"网络实名制"到近年来升级的网络安全法</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-20">
+                            <div class="col-md-3">
+                                <a href="/news/article-146879.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241102-1/09b6a48b02beb826a8286e56cc49bbe9.webp" alt="解锁网络自由：详解Shadowrocket配置分享全攻略" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-146879.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        解锁网络自由：详解Shadowrocket配置分享全攻略                                    </h3>
+                                </a>
+                                <p>在这个数字化时代，网络隐私和自由访问已成为现代网民的基本需求。作为iOS平台上广受欢迎的网络代理工具，Shadowrocket以其强大的功能和灵活的配置选项赢得了众多用户的青睐。然而，许多用户在掌握基</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-19">
+                            <div class="col-md-3">
+                                <a href="/news/article-146514.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241102-1/95231a9ee353a88dd62f350f4f78784e.webp" alt="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-146514.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验                                    </h3>
+                                </a>
+                                <p>在当今复杂的网络环境中，许多用户都面临着访问限制和隐私保护的挑战。Clash 作为一款基于 Go 语言开发的高性能代理工具，因其灵活的规则配置和高效的流量转发能力而广受欢迎。而 Clash Magis</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-18">
                             <div class="col-md-3">
                                 <a href="/news/article-146146.htm" class="xcblog-blog-url">
@@ -221,64 +277,8 @@
                                 <p>引言：为什么我们需要科学上网？  在当今全球化的互联网时代，获取信息和资源的能力往往决定了个人和企业的竞争力。然而，由于各种原因，许多国家和地区对特定网站和服务实施了访问限制，其中就包括Google </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-12">
-                            <div class="col-md-3">
-                                <a href="/news/article-143964.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/a843a018c779c6e8f92f25837fb28ac4.webp" alt="科学上网新选择：Clash节点购买与配置终极指南" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-143964.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        科学上网新选择：Clash节点购买与配置终极指南                                    </h3>
-                                </a>
-                                <p>在当今高度互联的世界中，互联网自由已成为许多用户的刚需。无论是为了获取全球资讯、学术研究，还是娱乐消遣，突破网络限制的需求日益增长。Clash作为一款功能强大的代理工具，凭借其灵活的规则配置和高效的流</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-11">
-                            <div class="col-md-3">
-                                <a href="/news/article-143592.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/8b46bfda95802afbdf51f5b67f73659d.webp" alt="安卓版Clash终极指南：从零开始掌握高效代理工具" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-143592.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        安卓版Clash终极指南：从零开始掌握高效代理工具                                    </h3>
-                                </a>
-                                <p>在当今数字化时代，网络已成为我们日常生活的重要组成部分。无论是工作、学习还是娱乐，一个稳定、快速的网络连接都至关重要。然而，由于各种原因，我们有时会遇到网络限制、速度缓慢或内容屏蔽等问题。这时，一款优</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-10">
-                            <div class="col-md-3">
-                                <a href="/news/article-143241.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/a7be69903c2ae4cd7117eef1a09bbfd4.webp" alt="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-143241.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        酷安平台对科学上网工具的屏蔽机制与突破策略深度解析                                    </h3>
-                                </a>
-                                <p>引言：当应用商店遇上网络自由之争  在移动互联网生态中，应用商店作为数字世界的"守门人"，其内容管控策略始终充满争议。酷安作为国内知名的第三方Android应用分发平台，因其相对开放的社区氛围成为许多</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-09">
-                            <div class="col-md-3">
-                                <a href="/news/article-142881.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241102-1/a13722888a549635b3dcc53887b19da3.webp" alt="突破网络藩篱：手机科学上网的终极指南与实用技巧" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-142881.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络藩篱：手机科学上网的终极指南与实用技巧                                    </h3>
-                                </a>
-                                <p>在当今数字化浪潮中，互联网已成为人们获取信息、沟通交流的重要渠道。然而，由于各种原因，许多地区的网络访问受到限制，使得人们无法自由获取全球资讯。手机作为我们日常生活中不可或缺的工具，如何通过它实现科学</p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/date/2025-08/">&laquo;</a></li> <li><a href="/date/2025-08/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-08/page-3.htm">3</a></li> <li><a href="/date/2025-08/page-3.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/date/2025-08/">&laquo;</a></li> <li><a href="/date/2025-08/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-08/page-3.htm">3</a></li><li><a href="/date/2025-08/page-4.htm">4</a></li> <li><a href="/date/2025-08/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
-                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-131717.htm" title="突破网络限制：v2rayNG注册链接获取与完整使用指南">突破网络限制：v2rayNG注册链接获取与完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-135287.htm" title="解密vmess租赁：科学上网的终极选择与实用指南">解密vmess租赁：科学上网的终极选择与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
-                        <li class="py-2"><a href="/news/article-137969.htm" title="解锁网络自由：Shadowrocket订阅添加全攻略与深度解析">解锁网络自由：Shadowrocket订阅添加全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-133231.htm" title="科学上网长期开启的利与弊：安全、效率与性能的深度权衡">科学上网长期开启的利与弊：安全、效率与性能的深度权衡</a></li>
                         <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-136900.htm" title="全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南">全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/news/article-134919.htm" title="天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南">天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-139384.htm" title="解锁网络自由：Shadowrocket节点获取与使用终极指南">解锁网络自由：Shadowrocket节点获取与使用终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-131717.htm" title="突破网络限制：v2rayNG注册链接获取与完整使用指南">突破网络限制：v2rayNG注册链接获取与完整使用指南</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
