--- a/free-nodes/2025-8-25-node-share-links.htm
+++ b/free-nodes/2025-8-25-node-share-links.htm
@@ -188,16 +188,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-140090.htm" title="iOS V2Ray 2019终极指南：从入门到精通的科学上网全攻略">iOS V2Ray 2019终极指南：从入门到精通的科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
+                        <li class="py-2"><a href="/news/article-138677.htm" title="梅林科学上网安装失败全解析：从故障排查到完美解决方案">梅林科学上网安装失败全解析：从故障排查到完美解决方案</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-131717.htm" title="突破网络限制：v2rayNG注册链接获取与完整使用指南">突破网络限制：v2rayNG注册链接获取与完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
-                        <li class="py-2"><a href="/news/article-137969.htm" title="解锁网络自由：Shadowrocket订阅添加全攻略与深度解析">解锁网络自由：Shadowrocket订阅添加全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-139384.htm" title="解锁网络自由：Shadowrocket节点获取与使用终极指南">解锁网络自由：Shadowrocket节点获取与使用终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-138312.htm" title="跨越数字边界：科学上网如何赋能英文作文翻译">跨越数字边界：科学上网如何赋能英文作文翻译</a></li>
-                        <li class="py-2"><a href="/news/article-133231.htm" title="科学上网长期开启的利与弊：安全、效率与性能的深度权衡">科学上网长期开启的利与弊：安全、效率与性能的深度权衡</a></li>
-                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-131371.htm" title="突破网络边界：梅林固件科学上网全攻略与深度解析">突破网络边界：梅林固件科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-139031.htm" title="毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理">毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理</a></li>
                     </ul>
     </div>
 </div>
@@ -209,7 +209,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
