--- a/free-nodes/2025-8-26-free-node-subscribe-links.htm
+++ b/free-nodes/2025-8-26-free-node-subscribe-links.htm
@@ -189,16 +189,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-138677.htm" title="梅林科学上网安装失败全解析：从故障排查到完美解决方案">梅林科学上网安装失败全解析：从故障排查到完美解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-132903.htm" title="解锁网络自由：Clash免费获取与配置全攻略">解锁网络自由：Clash免费获取与配置全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/news/article-139384.htm" title="解锁网络自由：Shadowrocket节点获取与使用终极指南">解锁网络自由：Shadowrocket节点获取与使用终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-144688.htm" title="突破网络藩篱：科学上网软件全攻略与深度解析">突破网络藩篱：科学上网软件全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-133231.htm" title="科学上网长期开启的利与弊：安全、效率与性能的深度权衡">科学上网长期开启的利与弊：安全、效率与性能的深度权衡</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-134224.htm" title="掌握网络自由：Clash代理绕过终极配置指南">掌握网络自由：Clash代理绕过终极配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-136900.htm" title="全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南">全面掌握Quantumult浏览器：从在线安装到高级配置的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-135826.htm" title="突破网络边界：PS4玩家实现SS科学上网的终极指南">突破网络边界：PS4玩家实现SS科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
+                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-140449.htm" title="突破数字边界：科学上网的全面指南与最佳实践">突破数字边界：科学上网的全面指南与最佳实践</a></li>
+                        <li class="py-2"><a href="/news/article-132810.htm" title="Clash续费全攻略：从零开始掌握代理服务的无缝延续">Clash续费全攻略：从零开始掌握代理服务的无缝延续</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -210,7 +210,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
