--- a/free-nodes/2025-8-27-free-subscribe-node.htm
+++ b/free-nodes/2025-8-27-free-subscribe-node.htm
@@ -168,6 +168,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-8-28-node-share.htm">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -192,16 +193,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-134919.htm" title="天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南">天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-137969.htm" title="解锁网络自由：Shadowrocket订阅添加全攻略与深度解析">解锁网络自由：Shadowrocket订阅添加全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
-                        <li class="py-2"><a href="/news/article-139031.htm" title="毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理">毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
                         <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
+                        <li class="py-2"><a href="/news/article-140449.htm" title="突破数字边界：科学上网的全面指南与最佳实践">突破数字边界：科学上网的全面指南与最佳实践</a></li>
+                        <li class="py-2"><a href="/news/article-131371.htm" title="突破网络边界：梅林固件科学上网全攻略与深度解析">突破网络边界：梅林固件科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-132078.htm" title="突破网络藩篱：全面解析五大科学上网工具及实战指南">突破网络藩篱：全面解析五大科学上网工具及实战指南</a></li>
                     </ul>
     </div>
 </div>
@@ -213,7 +214,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
