--- a/index.html
+++ b/index.html
@@ -157,6 +157,90 @@
                 <div class="col-md-9">
                     <h2 class="py-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、新加坡、美国、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了新加坡、日本、美国、香港、加拿大、欧洲、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、日本、韩国、欧洲、香港、新加坡、加拿大等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、日本、欧洲、香港、新加坡、美国、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、加拿大、香港、日本、韩国、新加坡、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、香港、新加坡、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-27">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-8-27-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -264,16 +348,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-136542.htm" title="全面掌握vmess链接转换：从基础到实战的完整指南">全面掌握vmess链接转换：从基础到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-134579.htm" title="突破网络边界：科学上网的终极指南与深度解析">突破网络边界：科学上网的终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-134919.htm" title="天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南">天行浏览科学上网全攻略：解锁全球网络自由与隐私保护的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-137609.htm" title="Surfboard免费节点全攻略：从获取到配置的完整指南">Surfboard免费节点全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
                         <li class="py-2"><a href="/news/article-139384.htm" title="解锁网络自由：Shadowrocket节点获取与使用终极指南">解锁网络自由：Shadowrocket节点获取与使用终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-136186.htm" title="跨越信息边界：科学上网的全面教学指南与深度思考">跨越信息边界：科学上网的全面教学指南与深度思考</a></li>
+                        <li class="py-2"><a href="/news/article-132439.htm" title="深度解析V2Ray路由器插件安装失败：从排查到完美解决的完整指南">深度解析V2Ray路由器插件安装失败：从排查到完美解决的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-136542.htm" title="全面掌握vmess链接转换：从基础到实战的完整指南">全面掌握vmess链接转换：从基础到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +369,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
