--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -197,7 +197,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank"><b>西游云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.xiyou666.xyz/?path=" data-type="Xiyou" data-code="register&code" target="_blank"><b>西游云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -264,7 +264,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.xiyou666.xyz/?path=" data-type="Xiyou" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -550,16 +550,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
-                        <li class="py-2"><a href="/news/article-132810.htm" title="Clash续费全攻略：从零开始掌握代理服务的无缝延续">Clash续费全攻略：从零开始掌握代理服务的无缝延续</a></li>
-                        <li class="py-2"><a href="/news/article-135826.htm" title="突破网络边界：PS4玩家实现SS科学上网的终极指南">突破网络边界：PS4玩家实现SS科学上网的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-131717.htm" title="突破网络限制：v2rayNG注册链接获取与完整使用指南">突破网络限制：v2rayNG注册链接获取与完整使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-138312.htm" title="跨越数字边界：科学上网如何赋能英文作文翻译">跨越数字边界：科学上网如何赋能英文作文翻译</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
-                        <li class="py-2"><a href="/news/article-135609.htm" title="深度解析：Shadowrocket数据不走问题的终极解决方案">深度解析：Shadowrocket数据不走问题的终极解决方案</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-139031.htm" title="毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理">毛子固件路由器进阶指南：手把手教你部署V2Ray实现安全代理</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/news/article-140807.htm" title="深度解析Shadowrocket：从版本选择到高阶配置的全方位指南">深度解析Shadowrocket：从版本选择到高阶配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-131371.htm" title="突破网络边界：梅林固件科学上网全攻略与深度解析">突破网络边界：梅林固件科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
                     </ul>
     </div>
 </div>
@@ -571,7 +571,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
