--- a/privacy.htm
+++ b/privacy.htm
@@ -189,16 +189,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-134224.htm" title="掌握网络自由：Clash代理绕过终极配置指南">掌握网络自由：Clash代理绕过终极配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-138312.htm" title="跨越数字边界：科学上网如何赋能英文作文翻译">跨越数字边界：科学上网如何赋能英文作文翻译</a></li>
-                        <li class="py-2"><a href="/news/article-135826.htm" title="突破网络边界：PS4玩家实现SS科学上网的终极指南">突破网络边界：PS4玩家实现SS科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-137969.htm" title="解锁网络自由：Shadowrocket订阅添加全攻略与深度解析">解锁网络自由：Shadowrocket订阅添加全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-133862.htm" title="深度解析Shadowrocket分应用代理：打造个性化隐私防护网络">深度解析Shadowrocket分应用代理：打造个性化隐私防护网络</a></li>
+                        <li class="py-2"><a href="/news/article-140807.htm" title="深度解析Shadowrocket：从版本选择到高阶配置的全方位指南">深度解析Shadowrocket：从版本选择到高阶配置的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-140090.htm" title="iOS V2Ray 2019终极指南：从入门到精通的科学上网全攻略">iOS V2Ray 2019终极指南：从入门到精通的科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-133231.htm" title="科学上网长期开启的利与弊：安全、效率与性能的深度权衡">科学上网长期开启的利与弊：安全、效率与性能的深度权衡</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/news/article-132439.htm" title="深度解析V2Ray路由器插件安装失败：从排查到完美解决的完整指南">深度解析V2Ray路由器插件安装失败：从排查到完美解决的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-139738.htm" title="安卓科学上网全攻略：解锁数字世界的自由之钥">安卓科学上网全攻略：解锁数字世界的自由之钥</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-137609.htm" title="Surfboard免费节点全攻略：从获取到配置的完整指南">Surfboard免费节点全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
                     </ul>
     </div>
 </div>
@@ -210,7 +210,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
