--- a/date/2025-08/page-2.htm
+++ b/date/2025-08/page-2.htm
@@ -93,6 +93,9 @@
                                         <a href="/">首页</a>
                                     </li>
                                                                         <li class="nav-item">
+                                        <a href="/free-nodes/">免费节点</a>
+                                    </li>
+                                                                        <li class="nav-item">
                                         <a href="/paid-subscribe/">推荐机场</a>
                                     </li>
                                                                         <li class="nav-item">
@@ -284,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
                         <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
                         <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
-                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -305,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -331,6 +334,7 @@
                                 <p class="copyright-text">
                                                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
