--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://clash-ssr-node.github.io" />
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>2025-09归档 - 免费Clash SSR 机场订阅官网</title>
+    <title>2025-09归档 - 第2页 - 免费Clash SSR 机场订阅官网</title>
         <meta name="keywords" content="2025-09归档免费Clash SSR 机场订阅官网" />
-        <meta name="description" content="2025-09归档，当前是第1页" />
+        <meta name="description" content="2025-09归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/sing_box_node/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="免费Clash SSR 机场订阅官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://clash-ssr-node.github.io" />
     <meta property="og:site_name" content="免费Clash SSR 机场订阅官网" />
-    <meta property="og:title" content="2025-09归档 - 免费Clash SSR 机场订阅官网" />
+    <meta property="og:title" content="2025-09归档 - 第2页 - 免费Clash SSR 机场订阅官网" />
     <meta property="og:image" content="/assets/website/img/sing_box_node/favicon.ico" />
-        <meta property="og:description" content="2025-09归档，当前是第1页" />
+        <meta property="og:description" content="2025-09归档，当前是第2页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-09归档 - 免费Clash SSR 机场订阅官网">
+    <meta name="apple-mobile-web-app-title" content="2025-09归档 - 第2页 - 免费Clash SSR 机场订阅官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -93,6 +93,9 @@
                                         <a href="/">首页</a>
                                     </li>
                                                                         <li class="nav-item">
+                                        <a href="/free-nodes/">免费节点</a>
+                                    </li>
+                                                                        <li class="nav-item">
                                         <a href="/paid-subscribe/">推荐机场</a>
                                     </li>
                                                                         <li class="nav-item">
@@ -134,6 +137,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、美国、新加坡、欧洲、韩国、加拿大、日本等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-13-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-13-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、新加坡、美国、香港、韩国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-155058.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="全面解析电脑科学上网APP：原理、选择与安全使用指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-155058.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面解析电脑科学上网APP：原理、选择与安全使用指南                                    </h3>
+                                </a>
+                                <p>引言：数字时代的"网络通行证"  在信息全球化的今天，互联网已成为人们获取知识、交流思想的重要渠道。然而，由于各种原因，某些地区可能对特定网络内容进行限制，这使得"科学上网"工具应运而生。电脑科学上网</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-11">
+                            <div class="col-md-3">
+                                <a href="/news/article-154698.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-154698.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略                                    </h3>
+                                </a>
+                                <p>在当今互联网环境中，网络限制和隐私安全问题日益突出，许多用户寻求高效、安全的代理工具来突破地域限制或保护个人数据。作为iOS平台上广受欢迎的代理客户端，Shadowrocket凭借其强大的功能和灵活的</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-154332.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/68a9d6caab9c920ad9aa89cc7ae091b1.webp" alt="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-154332.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        深度解析：Shadowrocket无法连接的全面诊断与高效修复指南                                    </h3>
+                                </a>
+                                <p>引言：当代理工具成为数字生活的刚需  在全球化互联网生态中，网络代理工具早已从极客专属演变为大众刚需。作为iOS平台代理工具的标杆，Shadowrocket凭借其简洁界面与强大功能俘获了数百万用户。然</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-09">
+                            <div class="col-md-3">
+                                <a href="/news/article-153962.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/f6645139de73ca6b8872f0a29427a2f9.webp" alt="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-153962.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案                                    </h3>
+                                </a>
+                                <p>引言：当经典操作系统遇上现代代理工具  在互联网技术飞速发展的今天，CentOS 6这个曾经辉煌的操作系统已逐渐退出主流舞台。然而，在大量企业服务器、老旧硬件设备以及特定行业场景中，这个以稳定性著称的</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-08">
                             <div class="col-md-3">
                                 <a href="/news/article-153605.htm" class="xcblog-blog-url">
@@ -190,64 +277,8 @@
                                 <p>在信息浪潮汹涌的数字时代，网络安全与个人隐私已成为现代人不可忽视的议题。随着全球互联网治理日趋复杂，越来越多的用户寻求技术手段以保护自身数据、突破地域限制并提升网络体验。在众多工具中，Clash作为一</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-04">
-                            <div class="col-md-3">
-                                <a href="/news/article-152136.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/9c2a579dfa1603d891f963a8511324b9.webp" alt="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-152136.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南                                    </h3>
-                                </a>
-                                <p>在现代互联网环境下，网络审查和数据监控日益严苛，用户对于隐私保护和信息自由的需求也在不断增长。面对封锁强、审查紧的网络环境，V2Ray凭借其高灵活性和强大的协议混淆能力，成为科学上网领域的重要利器。而</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-03">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/246d752b0cd257f4d6be3a247a8989a4.webp" alt="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了香港、欧洲、美国、日本、新加坡、加拿大、韩国等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-02">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、新加坡、美国、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了新加坡、日本、美国、香港、加拿大、欧洲、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
                         
-                                            </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -256,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
-                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-144688.htm" title="突破网络藩篱：科学上网软件全攻略与深度解析">突破网络藩篱：科学上网软件全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
                     </ul>
     </div>
 </div>
@@ -277,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -303,6 +334,7 @@
                                 <p class="copyright-text">
                                                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
