--- a/date/2025-09/page-2.htm
+++ b/date/2025-09/page-2.htm
@@ -2,18 +2,21 @@
 <html class="no-js" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="https://clash-ssr-node.github.io/free-nodes/" />
+        <link rel="canonical" href="https://clash-ssr-node.github.io" />
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>免费节点 - 免费Clash SSR 机场订阅官网 - 第2页</title>
+    <title>2025-09归档 - 免费Clash SSR 机场订阅官网</title>
+        <meta name="keywords" content="2025-09归档免费Clash SSR 机场订阅官网" />
+        <meta name="description" content="2025-09归档，当前是第1页" />
         <link rel="icon" href="/assets/website/img/sing_box_node/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="免费Clash SSR 机场订阅官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://clash-ssr-node.github.io/free-nodes/" />
+    <meta property="og:url" content="https://clash-ssr-node.github.io" />
     <meta property="og:site_name" content="免费Clash SSR 机场订阅官网" />
-    <meta property="og:title" content="免费节点 - 免费Clash SSR 机场订阅官网 - 第2页" />
+    <meta property="og:title" content="2025-09归档 - 免费Clash SSR 机场订阅官网" />
     <meta property="og:image" content="/assets/website/img/sing_box_node/favicon.ico" />
+        <meta property="og:description" content="2025-09归档，当前是第1页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -24,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点 - 免费Clash SSR 机场订阅官网 - 第2页">
+    <meta name="apple-mobile-web-app-title" content="2025-09归档 - 免费Clash SSR 机场订阅官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -117,11 +120,11 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
                     <div class="breadcrumbs-content">
-                        <h1 class="page-title">免费节点</h1>
+                        <h1 class="page-title">2025-09 归档</h1>
                     </div>
                     <ul class="breadcrumb-nav">
                         <li><a href="/">首页</a></li>
-                        <li>免费节点</li>
+                        <li>2025-09 归档</li>
                     </ul>
                 </div>
             </div>
@@ -134,32 +137,18 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-14">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-04">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享" style="width:100%;">
+                                <a href="/news/article-152136.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/9c2a579dfa1603d891f963a8511324b9.webp" alt="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <a href="/news/article-152136.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享                                    </h3>
+                                        利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南                                    </h3>
                                 </a>
-                                <p>这一次的节点更新覆盖了香港、美国、新加坡、欧洲、韩国、加拿大、日本等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-13-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-13-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 9月13日22.5M/S|免费SSR/Clash/Shadowrocket/V2ray节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、新加坡、美国、香港、韩国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p>在现代互联网环境下，网络审查和数据监控日益严苛，用户对于隐私保护和信息自由的需求也在不断增长。面对封锁强、审查紧的网络环境，V2Ray凭借其高灵活性和强大的协议混淆能力，成为科学上网领域的重要利器。而</p>
                             </div>
                         </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-03">
@@ -204,78 +193,8 @@
                                 <p>这一次的节点更新覆盖了新加坡、日本、美国、香港、加拿大、欧洲、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-31">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-31-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了美国、日本、韩国、欧洲、香港、新加坡、加拿大等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-30">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-30-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了韩国、日本、欧洲、香港、新加坡、美国、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了欧洲、加拿大、香港、日本、韩国、新加坡、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、香港、新加坡、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-27">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-27-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/7f6af7867bc39696f3d2707a3146a366.webp" alt="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-27-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享                                    </h3>
-                                </a>
-                                <p>这一次的节点更新覆盖了美国、日本、加拿大、新加坡、欧洲、韩国、香港等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/date/2025-09/">&laquo;</a></li> <li><a href="/date/2025-09/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -284,16 +203,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
-                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
-                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
-                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
+                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
                     </ul>
     </div>
 </div>
