--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -93,6 +93,9 @@
                                         <a href="/">首页</a>
                                     </li>
                                                                         <li class="nav-item">
+                                        <a href="/free-nodes/">免费节点</a>
+                                    </li>
+                                                                        <li class="nav-item">
                                         <a href="/paid-subscribe/">推荐机场</a>
                                     </li>
                                                                         <li class="nav-item">
@@ -162,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
-                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
+                        <li class="py-2"><a href="/news/article-141800.htm" title="美亚购物全攻略：科学上网是否必不可少？">美亚购物全攻略：科学上网是否必不可少？</a></li>
                         <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
                     </ul>
     </div>
 </div>
@@ -183,7 +186,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -209,6 +212,7 @@
                                 <p class="copyright-text">
                                                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
