--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -90,6 +90,9 @@
                                         <a href="/">首页</a>
                                     </li>
                                                                         <li class="nav-item">
+                                        <a href="/free-nodes/">免费节点</a>
+                                    </li>
+                                                                        <li class="nav-item">
                                         <a href="/paid-subscribe/">推荐机场</a>
                                     </li>
                                                                         <li class="nav-item">
@@ -131,6 +134,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/9c2a579dfa1603d891f963a8511324b9.webp" alt="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、韩国、加拿大、香港、日本、新加坡、欧洲等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-25-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/246d752b0cd257f4d6be3a247a8989a4.webp" alt="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-25-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、加拿大、韩国、日本、欧洲、香港、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-24">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -197,16 +228,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
+                        <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -218,7 +249,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -244,6 +275,7 @@
                                 <p class="copyright-text">
                                                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
