--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -93,6 +93,9 @@
                                         <a href="/">首页</a>
                                     </li>
                                                                         <li class="nav-item">
+                                        <a href="/free-nodes/">免费节点</a>
+                                    </li>
+                                                                        <li class="nav-item">
                                         <a href="/paid-subscribe/">推荐机场</a>
                                     </li>
                                                                         <li class="nav-item">
@@ -547,16 +550,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-v2ray.htm" title="免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 8月22日18M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
-                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 8月23日22.5M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -568,7 +571,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -594,6 +597,7 @@
                                 <p class="copyright-text">
                                                     <p>
                                                 <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
                                                 <a href="/news/">新闻资讯</a> |
                                                 <a href="/client.htm">客户端</a> |
